[Sheet] Fix double scroll bar

--- a/src/components/Sheets/Sheet.css
+++ b/src/components/Sheets/Sheet.css
@@ -1,7 +1,4 @@
 /* TODO Refactor with PageModal */
-.sheet {
-  overflow-y: scroll;
-}
 
 .sheet > *:first-child {
   margin-top: 0;
